@@ -34,6 +34,7 @@
 
 extern void new_browser_window(char *);
 
+static GR_TIMER_ID timer_id;
 static GR_WINDOW_ID dsp_wid;
 static GR_GC_ID dsp_gc;
 static GR_SCREEN_INFO screen_info;
@@ -41,6 +42,7 @@ static pthread_t dsp_thread;
 static int mode;
 static volatile int playing = 0, recording = 0, paused = 0;
 static char pcm_file[128];
+long currenttime = 0;
 
 #define RECORD        0
 #define PLAYBACK      1
@@ -150,15 +152,30 @@ static void dsp_do_draw(GR_EVENT * event)
 
 	if (playing || recording) {
 		GrText(dsp_wid, dsp_gc, 8, 20, "Press action to stop", -1, GR_TFASCII);
+		if (paused) {
+			GrText(dsp_wid, dsp_gc, 8, 35, "Press Play/Pause to resume", -1, GR_TFASCII);
+		}
+		else {
+			GrText(dsp_wid, dsp_gc, 8, 35, "Press Play/Pause to pause", -1, GR_TFASCII);
+		}
 	}
 	else {
 		if (mode == RECORD) {
 			GrText(dsp_wid, dsp_gc, 8, 20, "Press action to record", -1, GR_TFASCII);
 		}
-		else {
-			GrText(dsp_wid, dsp_gc, 8, 20, "Press action to playback", -1, GR_TFASCII);
-		}
 	}
+}
+
+static void draw_time()
+{
+	struct tm *tm;
+	char onscreentimer[128];
+
+	/* draw the time using currenttime */
+	tm = gmtime(&currenttime);
+	sprintf(onscreentimer, "Time: %02d:%02d:%02d", tm->tm_hour, tm->tm_min, tm->tm_sec);
+
+	GrText(dsp_wid, dsp_gc, 40, 80, onscreentimer, -1, GR_TFASCII);
 }
 
 static void * dsp_record(void *filename)
@@ -168,6 +185,7 @@ static void * dsp_record(void *filename)
 	int channels = 1;
 	int start_pos;
 	int filelength;
+	int localpaused = 0;
 
 	file_fd = open((char *)filename, O_WRONLY|O_CREAT|O_TRUNC, S_IRUSR|S_IWUSR);
 	if (file_fd < 0) {
@@ -204,11 +222,27 @@ static void * dsp_record(void *filename)
 	write(file_fd, "data", 4);
 	write_32_le(file_fd, 0);	// dummy length value
 
+	currenttime = 0;
+	timer_id = GrCreateTimer(dsp_wid, 1000);
+	draw_time();
+
 	while (!killed) {
 		ssize_t n, rem;
 		unsigned short *p = dsp_buf;
 
-		rem = n = read(dsp_fd, (void *)p, DSP_REC_SIZE);
+		if (paused && !localpaused) {
+			localpaused = 1;
+			GrDestroyTimer(timer_id);
+		}
+		if (!paused && localpaused)
+		{
+			localpaused = 0;
+			timer_id = GrCreateTimer(dsp_wid, 1000);
+		}
+
+		if (!paused) {
+			rem = n = read(dsp_fd, (void *)p, DSP_REC_SIZE);
+		}
 		if (n > 0) {
 			while (rem) {
 				n = write(file_fd, (void *)p, rem);
@@ -249,6 +283,7 @@ static void * dsp_playback(void *filename)
 	ssize_t count = 0;
 	int samplerate;
 	int channels;
+	int localpaused = 0;
 
 	file_fd = open((char *)filename, O_RDONLY);
 	if (file_fd < 0) {
@@ -269,8 +304,8 @@ static void * dsp_playback(void *filename)
 	channels = read_16_le(file_fd);
 	samplerate = read_32_le(file_fd);
 
-	set_dsp_rate(dsp_fd, samplerate);
 	set_dsp_channels(dsp_fd, channels);
+	set_dsp_rate(dsp_fd, samplerate);
 
 	killed = 0;
 	playing = 1;
@@ -281,11 +316,26 @@ static void * dsp_playback(void *filename)
 	/* assume a basic WAV header, skip to start of PCM data */
 	lseek(file_fd, 22, SEEK_SET);
 
+	timer_id = GrCreateTimer(dsp_wid, 1000);
+	draw_time();
+
 	do {
 		ssize_t n, rem;
 		unsigned short *p = dsp_buf;
 
-		count = rem = n = read(file_fd, (void *)p, DSP_PLAY_SIZE);
+		if (paused && !localpaused) {
+			localpaused = 1;
+			GrDestroyTimer(timer_id);
+		}
+		if (!paused && localpaused)
+		{
+			localpaused = 0;
+			timer_id = GrCreateTimer(dsp_wid, 1000);
+		}
+
+		if (!paused) {
+			count = rem = n = read(file_fd, (void *)p, DSP_PLAY_SIZE);
+		}
 		if (n > 0) {
 			while (rem) {
 				n = write(dsp_fd, (void *)p, rem);
@@ -297,11 +347,15 @@ static void * dsp_playback(void *filename)
 		}
 	} while (!killed && count > 0);
 
+	close(dsp_fd);
+
+	if (!localpaused) {
+		GrDestroyTimer(timer_id);
+	}
+
 	if (!killed) {
 		pz_close_window(dsp_wid);
 	}
-
-	close(dsp_fd);
 
 no_audio:
 	close(file_fd);
@@ -345,15 +399,18 @@ static void resume_dsp()
 
 static int dsp_do_keystroke(GR_EVENT * event)
 {
+	if (event->type == GR_EVENT_TYPE_TIMER) {
+		currenttime = currenttime + 1;
+		draw_time();
+		return 1;
+	}
+
 	switch (event->keystroke.ch) {
 	case '\r':
 	case '\n':
 		if (playing || recording) {
 			stop_dsp();
 			pz_close_window(dsp_wid);
-		}
-		else if (mode == PLAYBACK) {
-			start_playback();
 		}
 		else {
 			start_recording();
@@ -364,20 +421,22 @@ static int dsp_do_keystroke(GR_EVENT * event)
 		if (playing || recording) {
 			stop_dsp();
 		}
-		else {
-			pz_close_window(dsp_wid);
-		}
+		pz_close_window(dsp_wid);
 		break;
 
 	case 'd':
 		if (playing || recording) {
 			if (paused) {
+				/* timer_id = GrCreateTimer(dsp_wid, 1000); draw_time(); */
 				resume_dsp();
 			}
 			else {
 				pause_dsp();
+				/*GrDestroyTimer(timer_id); draw_time();*/
 			}
 		}
+		dsp_do_draw(0);
+		draw_time();
 		break;
 	}
 
@@ -424,8 +483,9 @@ void new_record_window(char *filename)
 		tm->tm_mon+1, tm->tm_mday, tm->tm_year + 1900, tm->tm_hour,
 		tm->tm_min, tm->tm_sec);
 
-	strncpy(pcm_file, myfilename, sizeof(pcm_file)-1);
+	strncpy(pcm_file, myfilename, sizeof(pcm_file) - 1);
 	mode = RECORD;
+
 	dsp_gc = GrNewGC();
 	GrSetGCUseBackground(dsp_gc, GR_TRUE);
 	GrSetGCForeground(dsp_gc, WHITE);
@@ -433,7 +493,7 @@ void new_record_window(char *filename)
 
 	dsp_wid = pz_new_window(0, HEADER_TOPLINE + 1, screen_info.cols, screen_info.rows - (HEADER_TOPLINE + 1), dsp_do_draw, dsp_do_keystroke);
 
-	GrSelectEvents(dsp_wid, GR_EVENT_MASK_EXPOSURE|GR_EVENT_MASK_KEY_DOWN);
+	GrSelectEvents(dsp_wid, GR_EVENT_MASK_EXPOSURE|GR_EVENT_MASK_KEY_DOWN|GR_EVENT_MASK_TIMER);
 
 	GrMapWindow(dsp_wid);
 }
@@ -441,7 +501,7 @@ void new_record_window(char *filename)
 void new_playback_window(char *filename)
 {
 	mode = PLAYBACK;
-	strncpy(pcm_file, filename, sizeof(pcm_file)-1);
+	strncpy(pcm_file, filename, sizeof(pcm_file) - 1);
 
 	dsp_gc = GrNewGC();
 	GrSetGCUseBackground(dsp_gc, GR_TRUE);
@@ -450,9 +510,12 @@ void new_playback_window(char *filename)
 
 	dsp_wid = pz_new_window(0, HEADER_TOPLINE + 1, screen_info.cols, screen_info.rows - (HEADER_TOPLINE + 1), dsp_do_draw, dsp_do_keystroke);
 
-	GrSelectEvents(dsp_wid, GR_EVENT_MASK_EXPOSURE|GR_EVENT_MASK_KEY_DOWN);
+	GrSelectEvents(dsp_wid, GR_EVENT_MASK_EXPOSURE|GR_EVENT_MASK_KEY_DOWN|GR_EVENT_MASK_TIMER);
 
 	GrMapWindow(dsp_wid);
+
+	currenttime = 0;
+	start_playback();
 }
 
 void new_playback_browse_window(void)
